--- a/nss/public/css/style.css
+++ b/nss/public/css/style.css
@@ -66,13 +66,13 @@ body {
     background: linear-gradient( to right, rgba(138, 133, 207, 0.6), rgba(54, 23, 231, 0.4)), url(".../src/Images/presidentAward.jpg") center top no-repeat;
     /*image-size 1920H 1080W*/
     z-index: 0;
-    border-radius: 0 0 50% 50%;
+    /* border-radius: 0 0 50% 50%; */
     transform: translateX(-50%) rotate(0deg);
 }
 
 .carousel-item>img {
     position: absolute;
-    border-radius: 30%;
+    /* border-radius: 30%; */
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -88,7 +88,7 @@ body {
     background: rgba(26, 30, 236, 0.8);
     opacity: 0.3;
     z-index: 0;
-    border-radius: 0 0 50% 50%;
+    /* border-radius: 0 0 50% 50%; */
     transform: translateX(-50%) translateY(18px) rotate(2deg);
 }
 
@@ -170,15 +170,15 @@ body {
     #hero:after {
         width: 180%;
         height: 95%;
-        border-radius: 0 0 50% 50%;
-        transform: translateX(-50%) rotate(0deg);
+        /* border-radius: 0 0 50% 50%; */
+        /* transform: translateX(-50%) rotate(0deg); */
     }
     #hero:before {
         top: 0;
         width: 180%;
         height: 94%;
-        border-radius: 0 0 50% 50%;
-        transform: translateX(-50%) translateY(20px) rotate(4deg);
+        /* border-radius: 0 0 50% 50%; */
+        /* transform: translateX(-50%) translateY(20px) rotate(4deg); */
     }
 }
 
@@ -188,16 +188,16 @@ body {
         top: 0;
         width: 200%;
         height: 95%;
-        border-radius: 0 0 50% 50%;
-        transform: translateX(-50%) rotate(0deg);
+        /* border-radius: 0 0 50% 50%; */
+        /* transform: translateX(-50%) rotate(0deg); */
     }
     #hero:before {
         left: 50%;
         top: 0;
         width: 200%;
         height: 94%;
-        border-radius: 0 0 50% 50%;
-        transform: translateX(-50%) translateY(20px) rotate(4deg);
+        /* border-radius: 0 0 50% 50%; */
+        /* transform: translateX(-50%) translateY(20px) rotate(4deg); */
     }
 }
 
