--- a/nss/public/css/style.css
+++ b/nss/public/css/style.css
@@ -31,20 +31,27 @@ body {
     left: 5%;
 }
 
-
-/* #csvtulogo {
-    position: absolute;
-    left: 45%;
-} */
-
-.container:nth-child(1)>a>img {
+#csvtu-logo {
+    /* position: absolute;
+    left: 45%; */
     position: relative;
     left: 0px;
     top: 2px;
     margin: 5px 50px 5px 2px;
     border-radius: 50%;
     overflow-wrap: normal;
+    display: inline;
 }
+
+
+/* .container:nth-child(1)>a>img {
+    position: absolute;
+    left: 0px;
+    top: 2px;
+    margin: 5px 50px 5px 2px;
+    border-radius: 50%;
+    overflow-wrap: normal;
+} */
 
 
 /*---Hero---*/
