--- a/nss/public/css/style.css
+++ b/nss/public/css/style.css
@@ -13,13 +13,23 @@ body {
     color: #fff !important;
 }
 
+.nav-logos {
+    float: left;
+    /* border: 1px solid red; */
+}
+
+.csvtu-header {
+    font-size: 1rem;
+}
+
 .navbar-brand {
     color: #fff;
-    margin-left: 5%;
+    margin-left: 10%;
 }
 
 .nav-bg {
     background: rgba(82, 13, 211, 0.6);
+    opacity: 80%;
 }
 
 .navbar-nav .nav-link {
@@ -36,21 +46,22 @@ body {
     left: 0%;
 } */
 
-#nsslogo {
-    position: absolute;
-    left: 5%;
+#nsslogo,
+#csvtu-logo {
+    position: relative;
+    left: 10px;
+    margin-left: 0px;
+    margin-right: 10px;
+    /* margin: 10px; */
 }
 
 #csvtu-logo {
     /* position: absolute;
     left: 45%; */
     position: relative;
-    left: 0px;
-    top: 2px;
-    margin: 5px 50px 5px 2px;
     border-radius: 50%;
-    overflow-wrap: normal;
-    display: inline;
+    /* overflow: hidden;
+    display: inline; */
 }
 
 
@@ -68,20 +79,23 @@ body {
 
 #hero {
     width: 100%;
-    height: 100vh;
+    height: 70vh;
     overflow: hidden;
     position: relative;
+    /* width: 200%;
+    height: 95%; */
+    background: rgba(26, 30, 236, 0.8);
+    /* background: linear-gradient(to right, indigo, white, indigo), url(".../src/Images/presidentAward.jpg") center top no-repeat; */
 }
 
 #hero:after {
     content: "";
     position: absolute;
     left: 50%;
-    top: 0;
-    width: 130%;
+    top: 100%;
     height: 95%;
     background: linear-gradient( to right, rgba(138, 133, 207, 0.6), rgba(54, 23, 231, 0.4)), url(".../src/Images/presidentAward.jpg") center top no-repeat;
-    /*image-size 1920H 1080W*/
+    /* image-size 1920H 1080W */
     z-index: 0;
     /* border-radius: 0 0 50% 50%; */
     transform: translateX(-50%) rotate(0deg);
@@ -95,19 +109,20 @@ body {
     transform: translate(-50%, -50%);
 }
 
-#hero:before {
+
+/* #hero:before {
     content: "";
     position: absolute;
     left: 50%;
     top: 0;
     width: 130%;
-    height: 96%;
+    height: 95%;
     background: rgba(26, 30, 236, 0.8);
     opacity: 0.3;
     z-index: 0;
-    /* border-radius: 0 0 50% 50%; */
+    border-radius: 0 0 50% 50%;
     transform: translateX(-50%) translateY(18px) rotate(2deg);
-}
+} */
 
 #hero .carousel-container {
     display: flex;
@@ -178,6 +193,11 @@ body {
     #hero .carousel-control-next {
         width: 5%;
     }
+    .rowC {
+        display: flex;
+        flex-direction: row;
+        border: 3px solid #000;
+    }
 }
 
 @media (max-width: 768px) {
@@ -197,6 +217,11 @@ body {
         /* border-radius: 0 0 50% 50%; */
         /* transform: translateX(-50%) translateY(20px) rotate(4deg); */
     }
+    .rowC {
+        display: flex;
+        flex-direction: row;
+        border: 3px solid #000;
+    }
 }
 
 @media (max-width: 575px) {
@@ -215,6 +240,11 @@ body {
         height: 94%;
         /* border-radius: 0 0 50% 50%; */
         /* transform: translateX(-50%) translateY(20px) rotate(4deg); */
+    }
+    .rowC {
+        display: flex;
+        flex-direction: column;
+        border: 3px solid #000;
     }
 }
 
@@ -350,21 +380,6 @@ body {
     background: #136d01;
     position: relative;
     overflow: hidden;
-}
-
-.donation {
-    background: #7ff767;
-    color: black;
-    padding: 3px 3.5px;
-    position: absolute;
-    right: 0;
-    top: 70%;
-    transform: translateX(110%);
-    transition: all 1s ease-in-out;
-}
-
-.donation:hover {
-    color: #000;
 }
 
 .project-container:hover .donation {
@@ -509,14 +524,16 @@ body {
 /* announcement */
 
 .box-event {
-    border: 3px solid red;
-    border-radius: 5%;
-    display: flex;
+    border: 3px solid black;
+    /* border-radius: 5%; */
+    display: inline-block;
+    margin-top: 10px;
     flex-direction: column;
-    /* position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%); */
+    left: 330%;
+    top: 25%;
+    position: relative;
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
     /* place-content: center;
     align-items: center;
     justify-content: center; */
@@ -527,14 +544,45 @@ body {
 
 /* Scroll-up to the top */
 
-#scrollUp {
-    background: #04a699 none repeat scroll 0 0;
-    bottom: 30px;
-    color: #fff;
-    font-size: 30px;
-    height: 40px;
-    line-height: 44px;
-    right: 30px;
-    text-align: center;
-    width: 40px;
+
+/* #scrollUp {
+        background: #04a699 none repeat scroll 0 0;
+        bottom: 30px;
+        color: #fff;
+        font-size: 30px;
+        height: 40px;
+        line-height: 44px;
+        right: 30px;
+        text-align: center;
+        width: 40px;
+    } */
+
+
+/* Footer */
+
+.footer-container {
+    display: flex;
+    height: 200px;
+    width: 100%;
+    background-color: #c4bdff;
+    justify-content: space-between;
+    font-weight: 500;
+}
+
+#logo-footer {
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+.pages-height {
+    height: 100vh;
+}
+
+
+/* Header:carousel & notice board */
+
+.rowC {
+    display: flex;
+    flex-direction: row;
+    border: 3px solid #000;
 }
