--- a/nss/public/css/style.css
+++ b/nss/public/css/style.css
@@ -21,6 +21,8 @@ body {
 
 .csvtu-header {
     font-size: 1rem;
+    padding: 0;
+    font-weight: 500;
 }
 
 .navbar-brand {
@@ -246,7 +248,19 @@ body {
     .rowC {
         display: flex;
         flex-direction: column;
-        border: 3px solid #000;
+        flex-wrap: wrap;
+    }
+    .navbar-brand {
+        display: flex;
+        flex-wrap: wrap;
+        float: top left;
+        padding-left: 0em;
+    }
+    .csvtu-header {
+        display: flex;
+        flex-wrap: nowrap;
+        float: left;
+        padding: 0;
     }
 }
 
