--- a/nss/src/css/team.css
+++ b/nss/src/css/team.css
@@ -1,156 +1,156 @@
 .team-area {
-    position: relative;
-    z-index: 1;
+  /* position: relative; */
+  z-index: 1;
 }
 
-.team-single:nth-child(4)>.team-top>.team-social {
-    margin-right: 10px;
-    padding: 0;
-    border: 2px solid #051f33;
+.team-single:nth-child(4) > .team-top > .team-social {
+  margin-right: 10px;
+  padding: 0;
+  border: 2px solid #051f33;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .team-single {
-    background: #fff;
-    /* padding: 35px 30px; */
+  background: #fff;
+  /* padding: 35px 30px; */
 }
 
 .team-single .team-top .team-thumb img {
-    border-radius: 500%;
-    background: #e6e7ec;
-    width: 250px;
-    height: 250px;
+  border-radius: 50%;
+  background: #e6e7ec;
+  width: 250px;
+  height: 250px;
 }
 
 .team-top {
-    position: relative;
+  position: relative;
 }
 
 .team-social {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
 }
 
 .team-social li a {
-    height: 40px;
-    width: 40px;
-    background: #39bdb3;
-    color: #fff;
-    display: block;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 40px;
-    margin-bottom: 10px;
-    opacity: 0;
-    visibility: hidden;
-    transform: translateY(5px);
-    -webkit-transform: translateY(5px);
-    -moz-transform: translateY(5px);
-    -ms-transform: translateY(5px);
-    -o-transform: translateY(5px);
+  height: 40px;
+  width: 40px;
+  background: #39bdb3;
+  color: #fff;
+  display: block;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 40px;
+  margin-bottom: 10px;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(5px);
+  -webkit-transform: translateY(5px);
+  -moz-transform: translateY(5px);
+  -ms-transform: translateY(5px);
+  -o-transform: translateY(5px);
 }
 
 .team-social li:last-child a {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .team-social li:nth-child(2) a {
-    background-color: #ff566e;
-    transition-delay: 0.1s;
+  background-color: #ff566e;
+  transition-delay: 0.1s;
 }
 
 .team-social li:nth-child(3) a {
-    background-color: #79c55d;
-    transition-delay: 0.2s;
+  background-color: #79c55d;
+  transition-delay: 0.2s;
 }
 
 .team-social li:nth-child(4) a {
-    background-color: #a50042;
-    transition-delay: 0.3s;
+  background-color: #a50042;
+  transition-delay: 0.3s;
 }
 
 .team-social li:nth-child(1),
 .team-social li:nth-child(4) {
-    margin-left: -80px;
+  margin-left: -80px;
 }
 
 .team-social li:nth-child(2),
 .team-social li:nth-child(3) {
-    margin-left: -55px;
+  margin-left: -55px;
 }
 
 .team-single:hover .team-social li a {
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0px);
-    -webkit-transform: translateY(0px);
-    -moz-transform: translateY(0px);
-    -ms-transform: translateY(0px);
-    -o-transform: translateY(0px);
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0px);
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  -ms-transform: translateY(0px);
+  -o-transform: translateY(0px);
 }
 
 .team-single .team-text h3 {
-    font-size: 24px;
-    margin-bottom: 7px;
+  font-size: 24px;
+  margin-bottom: 7px;
 }
 
 .team-single .team-text span {
-    font-size: 16px;
-    color: #39bdb3;
-    font-weight: 500;
-    text-transform: uppercase;
-    display: inline-block;
+  font-size: 16px;
+  color: #39bdb3;
+  font-weight: 500;
+  text-transform: uppercase;
+  display: inline-block;
 }
 
 .team-details-thumb img {
-    width: 100%;
+  width: 100%;
 }
 
 .team-right-text {
-    margin-left: 56px;
+  margin-left: 56px;
 }
 
 .team-right-text .team-head h2 {
-    font-size: 50px;
-    margin-bottom: 20px;
+  font-size: 50px;
+  margin-bottom: 20px;
 }
 
 .team-right-text .team-head h2 span {
-    font-size: 16px;
-    color: #39bdb3;
-    font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: #39bdb3;
+  font-family: "Roboto", sans-serif;
 }
 
 .team-info-list li span {
-    width: 150px;
-    color: #051f33;
-    font-weight: 500;
-    display: inline-block;
-    /* float: left; */
+  width: 150px;
+  color: #051f33;
+  font-weight: 500;
+  display: inline-block;
+  /* float: left; */
 }
 
 .team-info-list li {
-    margin-bottom: 15px;
-    color: #5f7b97;
-    display: flex;
-    float: wrap;
-    flex-wrap: wrap;
+  margin-bottom: 15px;
+  color: #5f7b97;
+  display: flex;
+  float: wrap;
+  flex-wrap: wrap;
 }
 
 .team-info-list li a {
-    color: #5f7b97;
+  color: #5f7b97;
 }
 
 .team-info-list li a:hover {
-    color: #79c55d;
+  color: #79c55d;
 }
 
 .team-single-social a {
-    color: #617486;
-    /* margin-right: 10px; */
+  color: #617486;
+  /* margin-right: 10px; */
 }
