--- a/nss/public/css/style.css
+++ b/nss/public/css/style.css
@@ -96,7 +96,7 @@ b
 
 #hero {
   width: 100vw;
-  height: 70vh;
+  /* height: 70vh; */
   overflow: hidden;
   position: relative;
   /* background: #303983; */
@@ -113,12 +113,7 @@ b
   left: 50%;
   top: 100%;
   height: 95%;
-  background: linear-gradient(
-      to right,
-      rgba(138, 133, 207, 0.6),
-      rgba(54, 23, 231, 0.4)
-    ),
-    url(".../src/Images/presidentAward.jpg") center top no-repeat;
+  background: url(".../src/Images/presidentAward.jpg") center top no-repeat;
   /* image-size 1920H 1080W */
   z-index: 0;
   /* border-radius: 0 0 50% 50%; */
@@ -260,6 +255,19 @@ b
 }
 
 @media (max-width: 575px) {
+  #hero {
+    flex-direction: column !important;
+  }
+
+  .box-event {
+    width: 100vw !important;
+  }
+
+  .carousel-item > img {
+    height: 100%;
+    width: 100%;
+  }
+
   #hero:after {
     left: 40%;
     top: 0;
